# CV-Homework

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  README.md  main.cpp
Assignment2/: README.md  main.cpp
Assignment2/include/: detector.h  test.h
Assignment2/src/: detector.cpp  test.cpp
Assignment3/: CMakeLists.txt  README.md  main.cpp
Assignment3/include/: opticalFlow.h
Assignment3/src/: opticalFlow.cpp
Quiz/: CMakeLists.txt  README.md  main.cpp
